# musicRAG

./: .env.example  .gitignore  README.md  goal.md  pyproject.toml  requirements.txt
docs/: MONGODB_MCP_SETUP.md  MusicRAG-GOAL.md  RAG2-UPGRADE.md
eval/: golden.jsonl  report.json  report.md  report_v2.json  report_v2.md
musicrag/: __init__.py  common.py  config.py
musicrag/agent/: __init__.py  cli.py  grade.py  intent.py  pipeline.py  tools.py
musicrag/eval/: audit_acceptance.py  run_eval.py  run_eval_v2.py
musicrag/ingest/: __init__.py  build_graph.py  chunk.py  create_indexes.py  embed_store.py  parse_sources.py  run_ingest.py  srt_chunker.py
musicrag/query/: __init__.py  answer.py  cli.py  embeddings.py  rerank.py  retrieve.py
tests/: test_agent_intent.py  test_agent_pipeline.py  test_agent_tools.py  test_config.py  test_create_indexes.py  test_embed_store.py  test_embeddings_select.py  test_eval_metrics.py  test_eval_v2.py  test_parse_sources.py  test_rerank.py  test_srt_chunker.py
web/: .env.example  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/attachments/: route.ts
web/app/api/chat/: route.ts
web/app/components/: chat-shell.tsx
web/components/ai-elements/: actions.tsx  inline-citation.tsx  loader.tsx  message.tsx  prompt-input.tsx  sources.tsx
web/lib/: agent.ts  chat-runs.ts  chat-store.ts  gateway.ts  models.ts  mongodb.ts  rag-harness.ts  ranking.ts  retrieval.ts  types.ts  voyage.ts
web/tests/: models.test.ts  rag-harness.test.ts  ranking.test.ts
(+8 files in other folders)
